add site top without search form

--- a/index.html
+++ b/index.html
@@ -15,14 +15,49 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!-- Title -->
-  <title>Document</title>
+  <title>NAMANGANLIKLAR24</title>
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <div class="site-name-box"><h1 class="site-name">NAMANGANLIKLAR 24</h1></div>
-    </header>
-  </div>
+
+  <!-- SITE HEADER -->
+  <header class="site-header">
+      <!-- SITE-HEADER-TOP -->
+
+    <div class="site-header-top">
+      <div class="site-header-top-container container">
+          <!-- SITE LOGO -->
+
+          <a class="site-logo" href="index.html">
+            <img src="imgs/NAMANGANLIKLAR 24.svg" alt="site-loge-img" width="276" height="45">
+          </a>
+
+          <!-- CURRENCY RATES -->
+
+          <ul class="currency-rates">
+            <li class="currency-rates-item">
+              <b class="currency-rates-tipe">$</b>
+              <span class="currency-rates-value">11437.50</span>
+            </li>
+            <li class="currency-rates-item">
+              <b class="currency-rates-tipe">P</b>
+              <span class="currency-rates-value">139.8310</span>
+            </li>
+          </ul>
+
+          <!-- GLOBAL-SEARCH-FORM -->
+
+          <!-- LANG TOGGLE -->
+
+          <div class="lang-toggle">
+            <a class="lang-toggle-link lang-toggle-link-active" href="index.html">УЗ</a>
+            <a class="lang-toggle-link" href="index.html/ru">РУ</a>
+          </div>
+
+          <!-- SITE HEADER AUTH -->
+            <a class="botton botton-primary" href="#">Войти</a>
+      </div>
+    </div>
+  </header>
 
 </body>
 </html>
