add search form and outline styles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           </ul>
 
           <!-- GLOBAL-SEARCH-FORM -->
-
+          <form class="global-search-form" action="https://echo.htmlacademy.ru" method="get">
+            <input class="global-search-form-input" type="search" name="search" placeholder="Поиск" aria-label="Поиск" required>
+        </form>
           <!-- LANG TOGGLE -->
 
           <div class="lang-toggle">
