--- a/index.html
+++ b/index.html
@@ -59,18 +59,17 @@
             <a class="botton botton-primary" href="#">Войти</a>
       </div>
     </div>
-  </header>
 
 
-  <!-- HEADER BOTTOM -->
+    <!-- HEADER BOTTOM -->
 
-  <div class="container">
-    <!-- SITENAV -->
+    <div class="container">
+      <!-- SITENAV -->
 
-    <nav class="site-nav">
-      <ul class="site-nav-list">
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Главное </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Интересное </a> </li>
+      <nav class="site-nav">
+        <ul class="site-nav-list">
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Главное </a> </li>
+          <li class="sitenav-item"><a class="sitenav-link" href="#">Интересное </a> </li>
         <li class="sitenav-item"><a class="sitenav-link" href="#">Экономика </a> </li>
         <li class="sitenav-item"><a class="sitenav-link" href="#">Политика </a> </li>
         <li class="sitenav-item"><a class="sitenav-link" href="#">Общество </a> </li>
@@ -81,6 +80,15 @@
         <li class="sitenav-item"><a class="sitenav-link" href="#">Наука </a> </li>
       </ul>
     </nav>
+
+    <!-- SITE-HEADER-BANNER -->
+    <aside>
+      <a class="site-header-banner-link" href="https://olcha.uz" target="_blank">
+        <img class="site-header-banner-img" src="imgs/banner-N24.jpg" alt="site-header-banner-link" width="1200" height="128" srcset="imgs/banner-N24.jpg 1x , imgs/banner-N24@2x.jpg 2x">
+      </a>
+    </aside>
   </div>
+
+</header>
 </body>
 </html>
