finish site footer index and css styles

--- a/index.html
+++ b/index.html
@@ -363,5 +363,106 @@
         </div>
     </div>
   </main>
+
+
+  <!-- SITE-FOOTER -->
+  <footer class="site-footer">
+    <div class="site-footer-container container">
+      <div class="site-footer-logo-wrapper">
+        <a href="index.html" class="site-footer-logo-link">
+          <img class="site-footer-logo-img" src="imgs/site-logo-white.svg" alt="site logo" width="264" height="28">
+        </a>
+      </div>
+
+      <div class="site-footer-about-links">
+        <div class="site-footer-about">
+          Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+        </div>
+
+        <div class="site-footer-links">
+          <ul class="dite-footer-links-list">
+
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Информация о сайте
+              </a>
+            </li>
+
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Напишите нам
+              </a>
+            </li>
+
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Реклама
+              </a>
+            </li>
+
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Прислать новость
+              </a>
+            </li>
+          </ul>
+
+
+          <ul class="dite-footer-links-list">
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Использование материалов
+              </a>
+            </li>
+
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Темы дня
+              </a>
+            </li>
+
+            <li class="site-footer-links-item">
+              <a href="#" class="site-footer-links-link">
+                Наша команда
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+        <hr class="site-footer-divider">
+
+        <div class="site-footer-socials">
+          <h2 class="site-footer-socials-text">Наши <br> социальные сети</h2>
+
+          <ul class="site-footer-socials-list">
+            <li class="site-footer-socials-item">
+              <a href="#" class="site-footer-socials-link">
+                <img class="site-footer-socials-img" src="imgs/icon-facebook.svg" alt="Facebook" width="25px" height="25px">
+              </a>
+            </li>
+
+            <li class="site-footer-socials-item">
+              <a href="https://www.instagram.com/namanganliklar24.uz/" class="site-footer-socials-link" target="_blank">
+                <img class="site-footer-socials-img" src="imgs/icon-instagram.svg" alt="Instagram" width="25px" height="25px">
+              </a>
+            </li>
+
+            <li class="site-footer-socials-item">
+              <a href="https://tg-me.com/NAMANGANLIKLAR" class="site-footer-socials-link">
+                <img class="site-footer-socials-img" src="imgs/icon-telegram.svg" alt="Telegram" width="25px" height="25px">
+              </a>
+            </li>
+
+            <li class="site-footer-socials-item">
+              <a href="https://www.youtube.com/@Namanganliklar24" class="site-footer-socials-link">
+                <img class="site-footer-socials-img" src="imgs/icon-youtube.svg" alt="YouTube" width="25px" height="25px">
+              </a>
+            </li>
+
+          </ul>
+        </div>
+
+    </div>
+  </footer>
 </body>
 </html>
