--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
 
       <nav class="site-nav">
         <ul class="site-nav-list">
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Главное </a> </li>
-          <li class="sitenav-item"><a class="sitenav-link" href="#">Интересное </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Экономика </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Политика </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Общество </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Технологии </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Спорт </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Культура </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Происшествия </a> </li>
-        <li class="sitenav-item"><a class="sitenav-link" href="#">Наука </a> </li>
+          <li class="sitenav-item"><a class="sitenav-link" href="index.html">Главное </a> </li>
+          <li class="sitenav-item"><a class="sitenav-link" href="list.html">Интересное </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Экономика </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Политика </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Общество </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Технологии </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Спорт </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Культура </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Происшествия </a> </li>
+        <li class="sitenav-item"><a class="sitenav-link" href="list.html">Наука </a> </li>
       </ul>
     </nav>
 
