add form section for contact list

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <nav class="site-nav">
         <ul class="site-nav-list">
           <li class="sitenav-item"><a class="sitenav-link" href="index.html">Главное </a> </li>
-          <li class="sitenav-item"><a class="sitenav-link" href="list.html">Интересное </a> </li>
+          <li class="sitenav-item"><a class="sitenav-link" href="contact.html">Интересное </a> </li>
         <li class="sitenav-item"><a class="sitenav-link" href="list.html">Экономика </a> </li>
         <li class="sitenav-item"><a class="sitenav-link" href="list.html">Политика </a> </li>
         <li class="sitenav-item"><a class="sitenav-link" href="list.html">Общество </a> </li>
