add content-page contact-with

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,34 @@
           </div>
           <button class="contact-page-form-submet button button-primary">Отправить</button>
         </form>
+
+        <div class="contact-page-info">
+          <ul class="contact-page-info-list">
+
+            <li class="contact-page-info-item">
+              <h3 class="contact-page-info-item-heading">Электронная почта</h3>
+              <a href="mailto:info@namanganliklar24.uz?subject=N24.uz%20saytidan%20habar&body=Hello%20World%0D%0A">
+                <p class="contact-page-info-item-content">info@namanganliklar24.uz</p>
+              </a>
+            </li>
+
+            <li class="contact-page-info-item">
+              <h3 class="contact-page-info-item-heading">Номер телефона</h3>
+
+                <p class="contact-page-info-item-content"><a href="tel:+998885225476">+998 88 522-54-76</a></p>
+
+            </li>
+
+            <li class="contact-page-info-item">
+              <h3 class="contact-page-info-item-heading">Адрес</h3>
+              <p class="contact-page-info-item-content">Ташкент, площадь Мустакиллик, 6 </p>
+            </li>
+
+          </ul>
         </div>
+
+        </div>
+
       </div>
     </div>
   </main>
